ch-09: Sample of what full configuration of a YAML file could look like. And a yaml file for testing purposes at the moment

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -1,7 +1,10 @@
 FILE_LOCATION:
-  HOST: hosts.txt
+  HOST: host.txt
 DEFAULT:
+  IP: 127.0.0.1 
+  PORT: 80
   CATEGORY: default
 BLOCK:
+	IP: 127.0.0.1 
   CATEGORY: blacklist
 LANG: en 
