--- a/.dot/.config
+++ b/.dot/.config
@@ -1,8 +1,10 @@
+#!/bin/bash
+
 DEFAULT_LANG="en"
 DEFAULT_CATEGORY="default"
 DEFAULT_PORT="80"
-DEFAULT_IP=$LOCALHOST
-BLOCK_IP=$LOCALHOST
+DEFAULT_IP="$LOCALHOST"
+BLOCK_IP="$LOCALHOST"
 BLOCK_CATEGORY="Blacklist"
-FILE_HOST=$DIR"hosts.txt"
-BACK_FILE=${BACK_DIR}"hosts.bak.txt"
+FILE_HOST="$DIR""hosts.txt"
+BACK_FILE="${BACK_DIR}""hosts.bak.txt"
