[CH-F-G035] Trying to avoid using the 'usr/local' and symlinking bats run

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ language: bash
 before_install:
     - git clone https://github.com/sstephenson/bats.git
 install:
-    - cd bats
-    - ./install.sh /usr/local
+    - ln -s bats/libexec/bats bats
 script: make commit
